Added credential listing to services page

--- a/scoreboard/app/templates/services/service.html
+++ b/scoreboard/app/templates/services/service.html
@@ -4,11 +4,18 @@ Editing {{service_name}} | {{team.name}} Team Services
 {% endblock %}
 
 {% block content %}
-<h1>Editing {{service_name}} | {{team.name}} Team Services</h1>
+<h1>Editing {{ service.friendly_name() }} on {{ service.host }}</h1>
+<h2>Service Checks</h2>
 <ul>
     {%- for check in service.checks %}
     <li><a href="{{ url_for('services.team_service_check_overview', service_id=service.id, check_id=check.id) }}">{{check}}</a></li>
     {% endfor %}
 </ul>
 
+{% if service.credentials %}
+<h2>Credentials</h2>
+{%- for credential in service.credentials %}
+<li><a href="{{ url_for('services.team_service_credentials_overview', service_id=service.id, credential_id=credential.id) }}">{{credential.user}}</a></li>
+{% endfor %}
+{% endif %}
 {% endblock %}
