Check results broken down by service now

--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -37,8 +37,9 @@
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="active" class="nav navbar-nav side-nav">
-                    <li class="selected"><a href="base.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
-                    <li><a href="/services"><i class="fa fa-tasks"></i> Services</a></li>
+                    <li {% if active_menu == 'dashboard' %}class="selected"{% endif %}><a href="/"><i class="fa fa-bullseye"></i> Dashboard</a></li>
+                    <li {% if active_menu == 'services' %}class="selected"{% endif %}><a href="/services"><i class="fa fa-tasks"></i> Services</a></li>
+                    <li {% if active_menu == 'credentials' %}class="selected"{% endif %}><a href="/credentials"><i class="fa fa-lock"></i> Credentials</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right navbar-user">
                     <li class="dropdown messages-dropdown">
