--- a/scoreboard/app/templates/credentials/index.html
+++ b/scoreboard/app/templates/credentials/index.html
@@ -1,13 +1,50 @@
 {% extends 'base.html' %}
+
+{%  block head %}
+    <style>
+        li.credential {
+            list-style: none;
+        }
+
+        li.credential span.fa-padded-left {
+            margin-right: 5px;
+        }
+
+        a.edit {
+            margin-left: 15px;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
     <h1>Credentials for {{ team.name }}</h1>
     <ul>
         {% for credential in credentials %}
-            <li><strong>{{ credential.user }}</strong>: last changed {{ credential.last_changed }}
+            <li class="credential">
+                <h2>
+                    <span class="fa fa-user fa-padded-left"></span>
+                    {{ credential.user }}
+                    <a href="{{ url_for('credentials.team_credential_edit', credential_id=credential.id) }}" class="btn btn-sm btn-primary edit">
+                        <span class="fa fa-pencil"></span>
+                        Edit
+                    </a>
+                </h2>
                 <ul>
-                    {%  for service_check in credential.checks %}
-                        <li>{{ service_check }}</li>
-                    {% endfor %}
+                    <li>
+                        Password last changed:
+                        <strong>{{ credential.last_changed }}</strong>
+                    </li>
+                    <li>
+                        Checks using these credentials:
+                        <ul>
+                            {%  for service_check in credential.checks %}
+                                <li>
+                                    <strong>{{ service_check.service.friendly_name() }}</strong>
+                                    {{ service_check.friendly_name() }}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
                 </ul>
             </li>
         {%  endfor %}
