--- a/scoreboard/app/templates/services/service.html
+++ b/scoreboard/app/templates/services/service.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block title %}
 Editing {{service_name}} | {{team.name}} Team Services
 {% endblock %}
@@ -8,14 +9,14 @@ Editing {{service_name}} | {{team.name}} Team Services
 <h2>Service Checks</h2>
 <ul>
     {%- for check in service.checks %}
-    <li><a href="{{ url_for('services.team_service_check_overview', service_id=service.id, check_id=check.id) }}">{{check}}</a></li>
+    <li><a href="{{ url_for('services.team_service_check_overview', service_id=service.id, check_id=check.id) }}">{{ check.friendly_name() }}</a></li>
     {% endfor %}
 </ul>
 
 {% if service.credentials %}
 <h2>Credentials</h2>
 {%- for credential in service.credentials %}
-<li><a href="{{ url_for('services.team_service_credentials_overview', service_id=service.id, credential_id=credential.id) }}">{{credential.user}}</a></li>
+<li><a href="{{ url_for('services.team_service_credentials_overview', service_id=service.id, credential_id=credential.id) }}">{{ credential.username }}</a></li>
 {% endfor %}
 {% endif %}
 {% endblock %}
