Cleanup service view Add is_enabled flag for service check

--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -26,13 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="base.html">Admin Panel</a>
+                <a class="navbar-brand" href="/">Admin Panel</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="active" class="nav navbar-nav side-nav">
                     <li {% if active_menu == 'dashboard' %}class="selected"{% endif %}><a href="/"><i class="fa fa-bullseye"></i> Dashboard</a></li>
                     <li {% if active_menu == 'services' %}class="selected"{% endif %}><a href="/services"><i class="fa fa-tasks"></i> Services</a></li>
                     <li {% if active_menu == 'credentials' %}class="selected"{% endif %}><a href="/credentials"><i class="fa fa-lock"></i> Credentials</a></li>
+                    <li {% if active_menu == 'injects' %}class="selected"{% endif %}><a href="/injects"><i class="fa fa-briefcase"></i> Injects</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right navbar-user">
                     <li class="dropdown user-dropdown">
