--- a/scoreboard/app/templates/credentials/edit.html
+++ b/scoreboard/app/templates/credentials/edit.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
+
+{% block title %}
+Update credentials for {{ credential.user }} | team.name
+{%  endblock %}
+
 {% block content %}
+    <h1><span class="fa fa-user"></span> Update credentials for {{ credential.user }}</h1>
     <form method="POST" action="{{ url_for('credentials.team_credential_edit', credential_id=credential.id) }}">
         {{ form.hidden_tag() }}
         <div class="form-group">
