--- a/scoreboard/app/templates/status/index.html
+++ b/scoreboard/app/templates/status/index.html
@@ -32,6 +32,7 @@ CDT Stats
 {% endblock %}
 {% block content %}
 <div class="row">
+    {% if check_round != None %}
     <h1>Service Status as of  {{ check_round.end.strftime('%H:%M') }}</h1>
     <ul class="service-listing">
         {%- for team_round in check_round.team_checks %}
@@ -66,5 +67,8 @@ CDT Stats
             {% endif %}
         {%- endfor %}
     </ul>
+    {% else %}
+    <h1>No checks yet.</h1>
+    {% endif %}
 </div>
 {% endblock %}
