Added nl2br to convert newlines to new paragraphs for inject display Started inject display page

--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -33,7 +33,8 @@
                     <li {% if active_menu == 'dashboard' %}class="selected"{% endif %}><a href="/"><i class="fa fa-bullseye"></i> Dashboard</a></li>
                     <li {% if active_menu == 'services' %}class="selected"{% endif %}><a href="/services"><i class="fa fa-tasks"></i> Services</a></li>
                     <li {% if active_menu == 'credentials' %}class="selected"{% endif %}><a href="/credentials"><i class="fa fa-lock"></i> Credentials</a></li>
-                    <li {% if active_menu == 'injects' %}class="selected"{% endif %}><a href="/injects"><i class="fa fa-briefcase"></i> Injects</a></li>
+                    <li {% if active_menu == 'scoring' %}class="selected"{% endif %}><a href="/scoring"><i class="fa fa-line-chart"></i> Scoring</a></li>
+                    <li {% if active_menu == 'injects' %}class="selected"{% endif %}><a href="/scoring/injects"><i class="fa fa-briefcase"></i> Injects</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right navbar-user">
                     <li class="dropdown user-dropdown">
