--- a/scoreboard/app/templates/scoring/injects.html
+++ b/scoreboard/app/templates/scoring/injects.html
@@ -15,6 +15,7 @@
             <li>
                 <h2>
                     {{ inject.title }}
+                    <small>{{ inject.value }} Points</small>
                 </h2>
                 <p>{{ inject.body|nl2br }}</p>
                 <p>
