--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -55,15 +55,13 @@
         </nav>
 
         <div id="page-wrapper">
-            {% with messages = get_flashed_messages() %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
-                    <div class="alert alert-danger" role="alert">
-                        <ul class=flashes>
-                            {% for message in messages %}
-                                <li>{{ message }}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
 
                 {% endif %}
             {% endwith %}
