--- a/scoreboard/app/templates/scoring/injects.html
+++ b/scoreboard/app/templates/scoring/injects.html
@@ -33,6 +33,9 @@
                             Request Solve
                         </a>
                     {% endif %}
+                    {% if has_pending_solve(team, inject) %}
+                        <span class="label label-warning">Approval Pending</span>
+                    {% endif %}
                     </h3>
                 </p>
             </li>
