--- a/scoreboard/app/templates/base.html
+++ b/scoreboard/app/templates/base.html
@@ -35,6 +35,7 @@
                     <li {% if active_menu == 'credentials' %}class="selected"{% endif %}><a href="/credentials"><i class="fa fa-lock"></i> Credentials</a></li>
                     <li {% if active_menu == 'scoring' %}class="selected"{% endif %}><a href="/scoring"><i class="fa fa-line-chart"></i> Scoring</a></li>
                     <li {% if active_menu == 'injects' %}class="selected"{% endif %}><a href="/scoring/injects"><i class="fa fa-briefcase"></i> Injects</a></li>
+                    <li {% if active_menu == 'flags' %}class="selected"{% endif %}><a href="/scoring/flags"><i class="fa fa-flag"></i> Flags</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right navbar-user">
                     <li class="dropdown user-dropdown">
