--- a/scoreboard/app/templates/scoring/injects/index.html
+++ b/scoreboard/app/templates/scoring/injects/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Available injects for {{ team.name }}
+{% endblock %}
+
 {%  block head %}
     <style>
         li {
